--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -59,6 +59,16 @@ href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
 <HR>
 The RoadMap files below are tar files compressed using <b>gzip</b>.
 
+<P>RoadMap v1.0.12:
+<A class=normal href="roadmap/roadmap_1_0_12_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="roadmap/roadmap_1_0_12_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="roadmap/roadmap_1_0_12_armv4l.tar.gz">Linux/ARM binaries</A>,
+   (the Microsoft PocketPC/ARM binaries are not available yet),
+<A class=normal 
+   href="roadmap/roadmap_1_0_12_doc.tar.gz">Documentation</A>.
+
 <P>RoadMap v1.0.11:
 <A class=normal href="roadmap/roadmap_1_0_11_src.tar.gz">Sources only</A>,
 <A class=normal 
