--- a/roadmap/web/download.html
+++ b/roadmap/web/download.html
@@ -59,6 +59,9 @@ href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
 <HR>
 The RoadMap files below are tar files compressed using <b>gzip</b>.
 
+<P>RoadMap v1.0.12p1:
+<A class=normal href="roadmap/roadmap_1_0_12p1_src.tar.gz">1.0.12 Patch with full PocketPC sources</A>.
+
 <P>RoadMap v1.0.12:
 <A class=normal href="roadmap/roadmap_1_0_12_src.tar.gz">Sources only</A>,
 <A class=normal 
@@ -68,6 +71,7 @@ The RoadMap files below are tar files compressed using <b>gzip</b>.
    (the Microsoft PocketPC/ARM binaries are not available yet),
 <A class=normal 
    href="roadmap/roadmap_1_0_12_doc.tar.gz">Documentation</A>.
+.
 
 <P>RoadMap v1.0.11:
 <A class=normal href="roadmap/roadmap_1_0_11_src.tar.gz">Sources only</A>,
