--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -48,19 +48,22 @@ use RoadMap, not the driver.
 <HR>
 <CENTER>
 <P>
-A version of RoadMap for the Sharp Zaurus is also available from
-<A class="norma;" href="http://downloads.zaurususergroup.com/community/66.180.235.230/projects/zroadmap/">
-  Sharp's Zaurus user's group web site
+A version of RoadMap 1.0.12 for the Sharp Zaurus is also available from
+Wendell Turner's
+<A class="normal"
+   href="http://www.halcyon.com/wturner/zroadmap_1.0.12-r2_armv5te.ipk">
+  Sharp Zaurus ipk
 </A>.
 <P>
-The latest Roadmap sources are also available from <A class=normal
-href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
+The latest Roadmap sources are also available from
+<A class="normal"
+   href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
 </CENTER>
 <HR>
 The RoadMap files below are tar files compressed using <b>gzip</b>.
 
-<P>RoadMap v1.0.12p1:
-<A class=normal href="roadmap/roadmap_1_0_12p1_src.tar.gz">1.0.12 Patch with full PocketPC sources</A>.
+<P>RoadMap v1.0.12p2:
+<A class=normal href="roadmap/roadmap_1_0_12p2_src.tar.gz">1.0.12 full sources plus missing PocketPC sources</A>.
 
 <P>RoadMap v1.0.12:
 <A class=normal href="roadmap/roadmap_1_0_12_src.tar.gz">Sources only</A>,
