--- a/trunk/roadmap/web/bugs.html
+++ b/trunk/roadmap/web/bugs.html
@@ -13,7 +13,6 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="screenshots.html">Screenshots</a>
 <a class="normal" href="history.html">History</a>
 <a class="normal" href="maps.html">Maps</a>
-<a class="normal" href="hardware.html">Hardware</a>
 <a class="normal" href="bugs.html">Bugs</a>     
 <a class="normal" href="list.html">Mail</a>
 <a class="normal" href="todo.html">Todo</a>
@@ -37,13 +36,13 @@ due to a handful of bugs. Here are the details:
   available.
   <LI>The maps for the state of Hawaii do not use the NAD83 datum. The offset
   can be significant (a few hundred feet), making these maps basically unusable
-  for navigation. The USGS bureau has announced that their maps of hawaii are
+  for navigation. The USGS bureau has announced that their maps of Hawaii are
   being redone using the NAD83 datum, lets hope the US Census Bureau will do
   the same.
 </UL>
 <P>RoadMap known bugs: 
 <UL>
-  <LI>It happenned once that a freeway was showing up without its normal
+  <LI>It happened once that a freeway was showing up without its normal
   shape. This cannot be reproduced consistently, through. More details are
   welcome.
   <LI>Search of a city is broken: cities and places are confused. This makes
@@ -65,8 +64,8 @@ due to a handful of bugs. Here are the details:
   for the time being, until someone give a practical case where this does not
   work. 
   <LI>Street address conflicts appear when building maps. Some seems to 
-  be a TIGER map database problem (see above). Others might be caused by the
-  address range format issue (see below). A few still need to be investigated.
+  be a TIGER map database problem (see above).  A few still need
+  to be investigated.
   <LI>Some urban areas are missing. For example Woodland Hills (in Los Angeles 
   county). This may be a TIGER file problem: the string "WOODLAND HILLS" never 
   appears in the LA county files. </LI></UL>
