--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -13,23 +13,17 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="screenshots.html">Screenshots</a>
 <a class="normal" href="history.html">History</a>
 <a class="normal" href="maps.html">Maps</a>
-<a class="normal" href="hardware.html">Hardware</a>
 <a class="normal" href="bugs.html">Bugs</a>     
 <a class="normal" href="list.html">Mail</a>
 <a class="normal" href="todo.html">Todo</a>
 <HR>
-<P>
-<b>E-MAIL LIST DISASTER OF FEBRUARY 2005:</b> Due to technical problems during
-a server upgrade, the RoadMap e-mail list has been lost. Please subscribe to
-the list again if you have not done so already. Sorry for the inconvenience.
-<HR>
 <H2>Credits</H2>
 <P>
-The original RoadMap was (and still is) developped by Pascal Martin (pascal
+The original RoadMap was (and still is) developed by Pascal Martin (pascal
 dot martin at iname dot com). A version of RoadMap for the Sharp Zaurus was
-developped by Latchesar Ionkov (who wrote the original QT support). The
+developed by Latchesar Ionkov (who wrote the original QT support). The
 support for the Digital Charts of the World was contributed by Stephen
-Woodbridge. The version of RoadMap for Windows (PocketPC) is developped and
+Woodbridge. The version of RoadMap for Windows (PocketPC) is developed and
 supported by Ehud Shabtai (eshabtai at gmail dot com).
 <P>
 The latest Roadmap sources are also available from <A class=normal
@@ -47,6 +41,9 @@ screen. The proper way for using RoadMap in a car is to have a passenger
 use RoadMap, not the driver.
 <HR>
 <CENTER>
+<P>
+Starting with release 1.1.0, RoadMap downloads are from 
+   href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
 <P>
 A version of RoadMap 1.0.12 for the Sharp Zaurus is also available from
 Wendell Turner's
