--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -13,16 +13,93 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="screenshots.html">Screenshots</a>
 <a class="normal" href="history.html">History</a>
 <a class="normal" href="maps.html">Maps</a>
-<a class="normal" href="hardware.html">Hardware</a>
 <a class="normal" href="bugs.html">Bugs</a>     
 <a class="normal" href="list.html">Mail</a>
 <a class="normal" href="todo.html">Todo</a>
-<HR>
-<P>
-<b>E-MAIL LIST DISASTER OF FEBRUARY 2005:</b> Due to technical problems during
-a server upgrade, the RoadMap e-mail list has been lost. Please subscribe to
-the list again if you have not done so already. Sorry for the inconvenience.
 <HR> <BR>
+<P>Roadmap v1.1.0 (july ?, 2007)
+<UL>
+  <LI>
+  GPX data interchange support has been added.  A single GPX file,
+  containing waypoints, routes, and tracks, represents a RoadMap
+  "Trip".
+  <LI>
+  Landmarks (waypoints) can be created/deleted/edited/moved either
+  via mouse or dialog.  Deleted landmarks are saved, and can be
+  undeleted (even into a different trip).
+  <LI>
+  GPS track display (breadcrumb trail) based on distance, time, or
+  path deviation, with robust saves to disk, even if roadmap
+  crashes.
+  <LI>
+  Street and landmark labels are now rendered on-screen, using
+  either the system or a primitive internal font (which has
+  tuneable size).  Labels will be angled align with street, if the
+  font permits. (*)
+  <LI>
+  "Feature" files -- GPX-based lists of "points of interest", with
+  tuneable coloring, display sprites, labeling, and decluttering
+  <LI>
+  Per-side-of-street address ranges now work correctly.  Roads with no
+  addresses are now searchable.  Addresses now stored as unsigned. (*)
+  <LI>
+  Address searching now knows about "common" streat/road abbreviations.
+  <LI>
+  Can now display screen dimensions (in miles or km) in a "sign"
+  display message.
+  <LI>
+  "Long lines", those which begin and end in non-adjacent squares,
+  are now saved in a separate list.  This guarantees they will always
+  be displayed.  The extra expense is similar to that of polygons,
+  which are also not displayed "by square". (*)
+  <LI>
+  Support for Canadian RNF maps added.
+  Support for US State boundary maps added.
+  <LI>
+  AGG support.  GTK2 can now display using anti-aliased lines. (*)
+  <LI>
+  Long and right clicks can now bring up a configurable popup menu.
+  <LI>
+  Extended the implementation of popup menus -- they can now be bound
+  to other menu items, which allows for cascading menu
+  effects.  Popups can also be bound to toolbar buttons.
+  <LI>
+  3D "perspective" viewing mode mode. (*)
+  <LI>
+  Railroads will now be displayed.
+  <LI>
+  GTK/GTK2 dialogs are now modeless.
+  <LI>
+  Allow for more polygons (from 65K to 1M).
+  <LI>
+  Additional QT support for tooltips, button icons, initial
+  width/height settings.  New QT4 support.
+  <LI>
+  Makefiles rewritten for easier maintenance and readability.
+  <LI>
+  rdmgenmaps is now easier to use -- can now specify a state name.
+  <LI>
+  Can now replay NMEA data from a file (produced, for example, by gpsbabel)
+  <LI>
+  Signals are now caught gracefully, so that unsaved
+  landmark/trip/track files can be preserved.
+  <LI>
+  Performance improvements -- if a processing a county above a given
+  zoom level produces no drawing, this will be remembered, and that county
+  won't be processed again at that zoom level or above.
+  <LI>
+  Support for latest census maps (2006se)
+  <LI>
+  ImageMagick (for "convert") now optional when building.
+  <LI>
+  64-bit compatibility.  Probably needs further testing.
+  <LI>
+  Map schema changed to eliminate hard-coded layers.
+  <LI>
+  Many buildmap improvements, in terms of modularity.
+  <LI>
+Initial work on architecture independent map exchange format and tool.
+</UL>
 <P>Roadmap v1.0.12 (november 4, 2005)
 <UL>
   <LI>Makefile cleanup: everything must now be built in src. If only
