--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -75,7 +75,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
   Additional QT support for tooltips, button icons, initial
   width/height settings.  New QT4 support.
   <LI>
-  Makefiles rewritten for easier maintenance and readability.
+  Makefiles rewritten for better modularity and readability.  Rules
+  for tarball creation incorporated into makefiles.
   <LI>
   rdmgenmaps is now easier to use -- can now specify a state name.
   <LI>
@@ -98,7 +99,7 @@ href="sitestandard.css" type=text/css rel=stylesheet>
   <LI>
   Many buildmap improvements, in terms of modularity.
   <LI>
-Initial work on architecture independent map exchange format and tool.
+  Initial work on architecture independent map exchange format and tool.
 </UL>
 <P>Roadmap v1.0.12 (november 4, 2005)
 <UL>
