--- a/roadmap/web/screenshots.html
+++ b/roadmap/web/screenshots.html
@@ -23,6 +23,38 @@ Most screenshots below were made with the GTK2 version of RoadMap.
 valign="center">
   <TBODY>
   <TR vAlign=top>
+    <TD width="50%"><A href="screen-route.png">
+      <center>
+        <IMG src="stamp-route.png" ></A>
+      </center>
+    </TD>
+    <TD width="50%"><A href="screen-labels.png">
+      <center>
+        <IMG src="stamp-labels.png" ></A>
+      </center>
+    </TD>
+  </TR>
+  <TR vAlign=top>
+    <TD width="50%">
+      <center>
+        RoadMap 1.1.0 showing display of an on-screen route.  This
+	display shows anti-aliased lines, drawn with AGG support.</TD>
+      </center>
+    <TD width="50%">
+      <center>
+        RoadMap 1.1.0 showing customized UI, and showing the "primitive"
+	internal font that can be used when no other font is available
+	to present angled text.
+      </center>
+    </TD>
+  </TR>
+  </TBODY>
+</TABLE>
+<BR>
+<TABLE cellSpacing=5 cellPadding=0 width="100%" align=center border=0 
+valign="center">
+  <TBODY>
+  <TR vAlign=top>
     <TD width="50%"><A href="screen-market.jpg">
       <center>
         <IMG src="stamp-market.jpg" width="169" height="131"></A>
