--- a/trunk/roadmap/web/bugs.html
+++ b/trunk/roadmap/web/bugs.html
@@ -20,25 +20,14 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <P>WARNING: RoadMap is not yet capable of handling all US counties,
 due to a handful of bugs. Here are the details:
 <P>
+
 <UL>
-  <LI>The generation of the following RoadMap map files generate errors for the 
-  following counties: 02110, 51095, 51830. This seems to be a problem with the 
-  Tiger/Line 2002 data (duplicated records, most likely an erroneous TLID). The 
-  problem has been worked around more or less for now.
-  <P><b>Latest News</b>:
-  the US Census Bureau has fixed several duplicated line ID, making changes to
-  7 counties. My choice so far is to not update the RoadMap maps, since the
-  changes are quite minimal.
-  <LI>The RoadMap maps are getting old: they are based on the 2002 release
-  of the TIGER/line files. The truth is, 2003 provides very few updates.
-  The announced 2004 release (end of 2004..) is much more interesting. I plan
-  on updating the maps a few months after the 2004 release has been made
-  available.
   <LI>The maps for the state of Hawaii do not use the NAD83 datum. The offset
   can be significant (a few hundred feet), making these maps basically unusable
   for navigation. The USGS bureau has announced that their maps of Hawaii are
   being redone using the NAD83 datum, lets hope the US Census Bureau will do
   the same.
+  <b><i>As of 2007, I don't know whether this is still true.  -pgf</i></b>
 </UL>
 <P>RoadMap known bugs: 
 <UL>
