--- a/trunk/roadmap/web/list.html
+++ b/trunk/roadmap/web/list.html
@@ -21,7 +21,10 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <P>
 <P>Instructions: 
 <UL>
-  <LI>To subscribe to the mailing list simply email <a href="mailto:roadmap-subscribe@saignon.net">roadmap-subscribe@saignon.net</a> and follow the instructions.
+  <LI>To subscribe to the mailing list simply email
+    <a href="mailto:roadmap-subscribe@saignon.net">
+    roadmap-subscribe@saignon.net</a> and follow the instructions.
+    Unfortunately, there are currently no archives of the list.
   </LI></UL>
 </BODY></HTML>
 
