--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -65,6 +65,9 @@ with respect to the accuracy, usefulness, novelty, validity,
 scope, completeness or currency of the Data
 </I>
 <P>
+Note that the Canadian RNF maps currently contain no water
+features, and no railroads.
+<P>
 The data used for the non-US/Canada portion was extracted from
 the Digital Charts
 of the World (DCW), a product from the US Department of Defense. Most of
